<resources>
    <string name="app_name">PlanEt</string>
    <string name="home_label">Home</string>
    <string name="day_label">Day View</string>
    <string name="accounts_label">Accounts</string>
    <string name="preferances_label">Preferences</string>
    <string name="settings_label">Settings</string>

    <!-- Home Fragment-->
    <string name="starts_at">Starts at: %s </string>
    <string name="ends_at">Ends at: %s </string>
    <string name="due_date">Due By: %s </string>
    <string name="hello_greeting">Hello %s! </string>

    <!-- Settings Fragment-->
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="cannot_edit_text_field">none</string>
    <string name="text">text</string>
    <string name="number">number</string>

    <!-- Day Fragment-->
    <string name="alert_cannot_show_events">Cannot show events since Read from Calendar Permission was not granted! </string>

    <!-- Dialogs -->
    <string name="request_read_permission">Requesting to read from your Calender </string>
    <string name="request_read_events_message">In order to show your events we need to read from your Google Calender.<br />
        If we do not have access, no events will be shown. Will you allow us to read your events?</string>

    <string name="select_tasks_dialog_title">Found new tasks from Moodle </string>
    <string name="are_you_sure_dialog_title">Are you sure </string>
    <string name="select_tasks_positive_button">Start Planning</string>
    <string name="starting_to_plan_message">Planning your schedule</string>
    <string name="changes_detected_message">Your changes will be lost, are you sure you want to continue?</string>
    <string name="recalculate_warning_message">Any schedule formerly planned for this task will be lost, are you sure you want to continue?</string>
    <string name="found_changes_dialog_title">Found unsaved changes </string>
    <string name="plan_approval_dialog_title">Finished calculating the study plan </string>
    <string name="plan_approval_positive_button">Approve</string>
    <string name="plan_approval_neutral_button">Recalculate</string>
    <string name="saving_your_schedule">Saving your schedule</string>
    <string name="plan_calculation_finished_message_part_1">This is the schedule calculated for you.<br/>
    You can choose which subtasks to keep and which not by tapping on them.</string>
    <string name="plan_calculation_finished_message_part_2">If this schedule works for you, press Approve.<br/>
    If it does not, press on Recalculate. (We will need different parameters for a different result,
        You will be asked to choose more Tasks to recalculate this task with)</string>
    <string name="saving_task_message">Saving Task</string>
    <string name="wrong_input_not_saving_message">Please check your input- Cannot Save</string>
    <string name="saving_preference_message">Saving Preference</string>


    <!-- Welcome Fragment-->
    <string name="welcome_title">Welcome to PlanEt!</string>
    <string name="planet_introduction_part_1">Your helper for getting the most out of your time!</string>
    <string name="planet_introduction_part_2">We draw your upcoming tasks from Moodle, and combined with events from your Google Calender,
    and Preferences you set, we create the right schedule for you!</string>
    <string name="name_title">What shall we call you?</string>

    <!-- Moodle Init-->
    <string name="login_error">Something went wrong during login,<br />
        make sure your credentials are correct</string>

    <!-- Initial Settings-->
    <string name="settings_instructions">One of the values was filled incorrectly.<br />
    Please note, Average time a task takes must be a number, in hours, between 1 and 100.<br />
    Preferred study session duration must be a number, in hours, between 1 and Average task time.<br />
    Min time between sessions must be a number, in minutes, lower then 1440 </string>

    <string name="error_task_duration">input: 1..100</string>
    <string name="error_preferred_session">input: 1..TaskTime</string>
    <string name="error_min_time">input: 0..1440</string>
    <string name="error_max_divisions">input: 0..100</string>

    <!-- Accounts Fragment-->
    <string name="user_name_moodle">User Name: %s</string>

</resources>